data/derived/comb/progs/unify/prog1168.ml.out
Characters 23-36:
  let _ = (fun x->x + x) (fun x->x**2);;
                         ^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
int
